[package]
name = "audio-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
cpal = "0.15.2"
eframe = "0.22.0"
egui = "0.22.0"
env_logger = "0.10.0"
tokio = { version =  "1.29.1", features = ["full"] }
